Fixed the overflow

--- a/src/styles/terminal/_projectsComponent.scss
+++ b/src/styles/terminal/_projectsComponent.scss
@@ -5,4 +5,5 @@
     column-gap: 1.5em;
     padding: 2em 3em;
     overflow-y: scroll;
+    height: 100%;
 }
