--- a/src/styles/terminal/projects/_ProjectCard.scss
+++ b/src/styles/terminal/projects/_ProjectCard.scss
@@ -1,6 +1,10 @@
 .cardProject{
     width: 100%;
+    position: relative;
     img {
+        position: absolute;
         width: 100%;
+        top: 0;
+        bottom: 0;
     }
 }
